<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.wxy.rpc</groupId>
    <artifactId>netty-rpc</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>

    <name>netty-rpc</name>
    <url>http://maven.apache.org</url>
    <modules>
        <module>consumer</module>
        <module>provider</module>
        <module>provider-api</module>
        <module>rpc-framework-core</module>
        <module>rpc-client-spring-boot</module>
        <module>rpc-client-spring-boot-starter</module>
        <module>rpc-server-spring-boot</module>
        <module>rpc-server-spring-boot-starter</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <encoding>UTF-8</encoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <spring-boot.version>2.5.2</spring-boot.version>
        <rpc.version>1.0.0</rpc.version>
        <netty.version>4.1.65.Final</netty.version>
        <lombok.version>1.18.24</lombok.version>
        <logback-classic.version>1.2.11</logback-classic.version>
        <curator.version>4.0.0</curator.version>
        <gson.version>2.8.9</gson.version>
        <hessian.version>4.0.65</hessian.version>
        <kryo.version>4.0.2</kryo.version>
        <protostuff.version>1.8.0</protostuff.version>
        <junit.version>3.8.1</junit.version>
        <tomcat.version>9.0.22</tomcat.version>
        <cglib.version>3.1</cglib.version>
        <nacos.version>2.1.1</nacos.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot.version}</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>repackage</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.0</version>
                    <configuration>
                        <source>${maven.compiler.source}</source>
                        <target>${maven.compiler.target}</target>
                        <encoding>${project.build.sourceEncoding}</encoding>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
